k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticketeer-frontend
  namespace: ticketeer
spec:
  type: NodePort
  selector:
    app: ticketeer-frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 30080
