k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticketeer-postgres
  namespace: ticketeer
spec:
  selector:
    app: ticketeer-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
