k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticketeer-redis
  namespace: ticketeer
spec:
  selector:
    app: ticketeer-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
